# get_desktop_picture

./: Cargo.toml  README.md
src/: main.rs
